# so_long

./: CMakeLists.txt  Makefile  draw_map.c  err_cln.c  map.ber  map1.ber  mfaWater.xpm  parser.c  play.c  prints.c  so_long.c  so_long_utils.c  test_mlx.c
bonus/: animation_bonus.c  draw_map_bonus.c  moves_bonus.c  parser_bonus.c  patrol_bonus.c  play_bonus.c  so_long_bonus.c  so_long_utils_bonus.c
gnl/: get_next_line.c  get_next_line_utils.c
images/: Amphibian.XPM  Coin.XPM  Ghost.XPM  Heart.XPM  Knight.XPM  Knight0.XPM  Knight1.XPM  Knight2.XPM  Knight3.XPM  Monster1.XPM  Monster2.XPM  Monster3.XPM  Monster4.XPM  Oldman.XPM  Princess.XPM  Slime.XPM  Spikes.XPM  Vampire.XPM  Wizard.XPM  mfaCabbage.xpm  mfaCattle.xpm  mfaFence.xpm  mfaMaize.xpm  mfaRoad.xpm  mfaWheat.xpm  princess_girl.XPM
includes/: get_next_line.h  so_long.h  so_long_bonus.h
mlx/: font.c
